<resources>
    <string name="app_name">HelpApp</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="loading_text">Загрузка…</string>
    <string name="news_text">Новости</string>
    <string name="search_text">Поиск</string>
    <string name="help_text">Помочь</string>
    <string name="history_text_bottom_navigation">История</string>
    <string name="profile_text">Профиль</string>
    <string name="profile_exit_text_button">Выйти из аккаунта</string>
    <string name="activity_profile_full_name_text_view_text">Константинов Денис</string>
    <string name="activity_profile_birthday_text_view_text">Дата рождения</string>
    <string name="activity_profile_value_date_birthday_text_view_text">01 февраля 1980</string>
    <string name="activity_profile_field_activity_text_view_text">Сфера деятельности</string>
    <string name="activity_profile_value_field_activity_text_view_text">Хирургия, травмотология</string>
    <string name="activity_profile_push_text_view_text">Получать push-уведомления</string>
    <string name="activity_profile_friends_text_view_text">Ваши друзья</string>
    <string name="activity_profile_1_text_view_text">Дмитрий Валерьевич</string>
    <string name="activity_profile_2_text_view_text">Евгений Александров</string>
    <string name="activity_profile_3_text_view_text">Виктор Кузнецов</string>
    <string name="change_photo_dialog_upload_text_view_text">Выбрать фото</string>
    <string name="change_photo_dialog_camera_text_view_text">Сделать снимок</string>
    <string name="change_photo_dialog_delete_text_view_text">Удалить</string>
    <string name="fragment_help_category_help_text_view_text">Выберите категорию помощи</string>
    <string name="search_view_hint">Введите название организации</string>
    <string name="search_view_pager_text">Ключевые слова: мастер-класс, помощь \nРезультаты поиска: %1$d мероприятий</string>
    <string name="change_fragment_exception_text">должен реализовывать интерфейс OnFragmentInteractionListener</string>
    <string name="search_hint">Hint</string>
    <string name="search_page_event_title">По мероприятиям</string>
    <string name="search_page_nko_title">По НКО</string>
    <string name="fragment_filter_text_view_text">Категории помощи</string>
    <string name="filter_text">Фильтр</string>
    <string name="link_to_us">Напишите нам</string>
    <string name="you_have_a_questions">У вас есть вопросы?</string>
    <string name="help_stuff">Помочь\nвещами</string>
    <string name="help_volunteer">Стать\nволонтером</string>
    <string name="help_prof">Проф.\nпомощь</string>
    <string name="help_money">Помочь\nденьгами</string>
    <string name="likes_count">+%1$d</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="dash"> - </string>
    <string name="remained">Осталось </string>
    <string name="event_be_over">Мероприятие завершено: </string>
    <string name="go_to_website">Перейти на сайт организации</string>

    <string-array name="months">
        <item>Январь </item>
        <item>Февраль </item>
        <item>Март </item>
        <item>Апрель </item>
        <item>Май </item>
        <item>Июнь </item>
        <item>Июль </item>
        <item>Август </item>
        <item>Сентябрь </item>
        <item>Октябрь </item>
        <item>Ноябрь </item>
        <item>Декабрь </item>
    </string-array>

    <string-array name="formatDay">
        <item> день </item>
        <item> дня </item>
        <item> дней </item>
    </string-array>

</resources>
