<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/change_photo_dialog_upload_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/upload"
        android:drawablePadding="24dp"
        android:paddingStart="@dimen/twenty_four_dp"
        android:paddingTop="@dimen/thirty_one_dp"
        android:paddingEnd="60dp"
        android:text="@string/change_photo_dialog_upload_text_view_text"
        android:textAppearance="@style/HelperText.Title4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/change_photo_dialog_camera_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/camera"
        android:drawablePadding="24dp"
        android:paddingStart="@dimen/twenty_four_dp"
        android:paddingTop="@dimen/thirty_seven_dp"
        android:paddingEnd="39dp"
        android:text="@string/change_photo_dialog_camera_text_view_text"
        android:textAppearance="@style/HelperText.Title4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_photo_dialog_upload_text_view" />

    <TextView
        android:id="@+id/change_photo_dialog_delete_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/delete"
        android:drawablePadding="24dp"
        android:paddingStart="@dimen/twenty_four_dp"
        android:paddingTop="@dimen/forty_three_dp"
        android:paddingEnd="121dp"
        android:paddingBottom="@dimen/twenty_eight_dp"
        android:text="@string/change_photo_dialog_delete_text_view_text"
        android:textAppearance="@style/HelperText.Title4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_photo_dialog_camera_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>