<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/leaf">


        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/profile_fragment_toolbar_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle2"
                android:text="@string/profile_fragment_toolbar_title"/>

        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/profile_photo_image_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_profile_profile_photo_image_view_layout_height"
                android:src="@drawable/image_man"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/full_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_full_name_text_view_margin_start"
                android:layout_marginTop="@dimen/activity_profile_full_name_text_view_margin_top"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:text="@string/activity_profile_full_name_text_view_text"
                android:textSize="@dimen/activity_profile_full_name_text_view_text_size"
                android:textColor="@color/black__87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_photo_image_view" />

            <TextView
                android:id="@+id/born_day_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_birthday_text_view_margin_start"
                android:layout_marginTop="@dimen/activity_profile_birthday_text_view_margin_top"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:text="@string/activity_profile_birthday_text_view_text"
                android:textSize="@dimen/activity_profile_birthday_text_view_text_size"
                android:textColor="@color/black__38"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/full_name_text_view" />

            <TextView
                android:id="@+id/value_date_born_day_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_value_date_birthday_text_view_margin_start"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:text="@string/activity_profile_value_date_birthday_text_view_text"
                android:textSize="@dimen/activity_profile_value_date_birthday_text_view_text_size"
                android:textColor="@color/black__87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/born_day_text_view" />

            <TextView
                android:id="@+id/field_activity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_field_activity_text_view_margin_start"
                android:layout_marginTop="@dimen/activity_profile_field_activity_text_view_margin_top"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:text="@string/activity_profile_field_activity_text_view_text"
                android:textSize="@dimen/activity_profile_field_activity_text_view_text_size"
                android:textColor="@color/black__38"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/value_date_born_day_text_view" />

            <TextView
                android:id="@+id/value_field_activity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_value_field_activity_text_view_margin_start"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:text="@string/activity_profile_value_field_activity_text_view_text"
                android:textSize="@dimen/activity_profile_value_field_activity_text_view_text_size"
                android:textColor="@color/black__87"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/field_activity_text_view" />

            <TextView
                android:id="@+id/push_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_push_text_view_margin_start"
                android:layout_marginTop="@dimen/activity_profile_push_text_view_margin_top"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:text="@string/activity_profile_push_text_view_text"
                android:textColor="@color/black__87"
                android:textSize="@dimen/activity_profile_push_text_view_text_size"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/value_field_activity_text_view" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/push_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_push_switch_margin_start"
                android:layout_marginTop="@dimen/activity_profile_push_switch_margin_top"
                android:layout_marginEnd="@dimen/activity_profile_push_switch_margin_end"
                android:theme="@style/SwitchTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_photo_image_view"/>

            <View
                android:id="@+id/divider_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_profile_divider_info_layout_height"
                android:layout_marginTop="@dimen/activity_profile_divider_info_margin_top"
                android:background="@color/cool_grey"
                app:layout_constraintTop_toBottomOf="@+id/push_text_view" />

            <TextView
                android:id="@+id/friends_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_friends_text_view_margin_start"
                android:layout_marginTop="@dimen/activity_profile_friends_text_view_margin_top"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:text="@string/activity_profile_friends_text_view_text"
                android:textSize="@dimen/activity_profile_friends_text_view_text_size"
                android:textColor="@color/black__38"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_info" />

            <ImageView
                android:id="@+id/profile_1_image_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_1_image_view_margin_start"
                android:layout_marginTop="@dimen/activity_profile_1_image_view_margin_top"
                android:src="@drawable/avatar_3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/friends_text_view"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/title_profile_1_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_1_text_view_margin_start"
                android:layout_marginTop="@dimen/activity_profile_1_text_view_margin_top"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:text="@string/activity_profile_1_text_view_text"
                android:textColor="@color/black__87"
                android:textSize="@dimen/activity_profile_1_text_view_text_size"
                app:layout_constraintStart_toEndOf="@+id/profile_1_image_view"
                app:layout_constraintTop_toBottomOf="@+id/divider_info" />

            <ImageView
                android:id="@+id/profile_2_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_2_image_view_margin_start"
                android:layout_marginTop="@dimen/activity_profile_2_image_view_margin_top"
                android:src="@drawable/avatar_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_1_image_view"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/title_profile_2_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_2_text_view_margin_start"
                android:layout_marginTop="@dimen/activity_profile_2_text_view_margin_top"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:text="@string/activity_profile_2_text_view_text"
                android:textColor="@color/black__87"
                android:textSize="@dimen/activity_profile_2_text_view_text_size"
                app:layout_constraintStart_toEndOf="@+id/profile_2_ImageView"
                app:layout_constraintTop_toBottomOf="@+id/title_profile_1_text_view" />

            <ImageView
                android:id="@+id/profile_3_ImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_3_image_view_margin_start"
                android:layout_marginTop="@dimen/activity_profile_3_image_view_margin_top"
                android:src="@drawable/avatar_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profile_2_ImageView"
                tools:ignore="ContentDescription"/>

            <TextView
                android:id="@+id/title_profile_3_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_profile_3_text_view_margin_start"
                android:layout_marginTop="@dimen/activity_profile_3_text_view_margin_top"
                android:fontFamily="sans-serif"
                android:textStyle="normal"
                android:text="@string/activity_profile_3_text_view_text"
                android:textColor="@color/black__87"
                android:textSize="@dimen/activity_profile_3_text_view_text_size"
                app:layout_constraintStart_toEndOf="@+id/profile_3_ImageView"
                app:layout_constraintTop_toBottomOf="@+id/title_profile_2_text_view" />

            <View
                android:id="@+id/divider_friends"
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_profile_divider_friends_layout_height"
                android:layout_marginTop="@dimen/activity_profile_divider_friends_margin_top"
                android:background="@color/cool_grey"
                app:layout_constraintTop_toBottomOf="@+id/profile_3_ImageView" />

            <Button
                android:id="@+id/exit_acc_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/activity_exit_acc_button_margin_start"
                android:layout_marginTop="@dimen/activity_exit_acc_button_margin_top"
                android:layout_marginEnd="@dimen/activity_exit_acc_button_margin_end"
                android:layout_marginBottom="@dimen/activity_exit_acc_button_margin_bottom"
                android:background="@color/leaf"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:shadowColor="@color/black___12"
                android:text="@string/profile_exit_text_button"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/activity_exit_acc_button_text_size"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider_friends" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</LinearLayout>