<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/change_photo_dialog_upload_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/change_photo_dialog_upload_image_view_margin_start"
        android:layout_marginTop="@dimen/change_photo_dialog_upload_image_view_margin_top"
        android:src="@drawable/upload"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/change_photo_dialog_upload_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/change_photo_dialog_upload_text_view_margin_start"
        android:layout_marginTop="@dimen/change_photo_dialog_upload_text_view_margin_top"
        android:layout_marginEnd="@dimen/change_photo_dialog_upload_text_view_margin_end"
        android:text="@string/change_photo_dialog_upload_text_view_text"
        android:textSize="@dimen/change_photo_dialog_upload_text_view_text_size"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/black__87"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/change_photo_dialog_upload_image_view"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/change_photo_dialog_camera_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/change_photo_dialog_camera_image_view_margin_start"
        android:layout_marginTop="@dimen/change_photo_dialog_camera_image_view_margin_top"
        android:src="@drawable/camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_photo_dialog_upload_image_view"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/change_photo_dialog_camera_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/change_photo_dialog_camera_text_view_margin_start"
        android:layout_marginTop="@dimen/change_photo_dialog_camera_text_view_margin_top"
        android:layout_marginEnd="@dimen/change_photo_dialog_camera_text_view_margin_end"
        android:text="@string/change_photo_dialog_camera_text_view_text"
        android:textSize="@dimen/change_photo_dialog_camera_text_view_text_size"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/black__87"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/change_photo_dialog_camera_image_view"
        app:layout_constraintTop_toBottomOf="@+id/change_photo_dialog_upload_text_view" />

    <ImageView
        android:id="@+id/change_photo_dialog_delete_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/change_photo_dialog_delete_image_view_margin_start"
        android:layout_marginTop="@dimen/change_photo_dialog_delete_image_view_margin_top"
        android:layout_marginBottom="@dimen/change_photo_dialog_delete_image_view_margin_bottom"
        android:src="@drawable/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_photo_dialog_camera_image_view"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/change_photo_dialog_delete_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/change_photo_dialog_delete_text_view_margin_start"
        android:layout_marginTop="@dimen/change_photo_dialog_delete_text_view_margin_top"
        android:layout_marginEnd="@dimen/change_photo_dialog_delete_text_view_margin_end"
        android:layout_marginBottom="@dimen/change_photo_dialog_delete_text_view_margin_bottom"
        android:text="@string/change_photo_dialog_delete_text_view_text"
        android:textSize="@dimen/change_photo_dialog_delete_text_view_text_size"
        android:fontFamily="sans-serif"
        android:textStyle="normal"
        android:textColor="@color/black__87"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/change_photo_dialog_camera_image_view"
        app:layout_constraintTop_toBottomOf="@+id/change_photo_dialog_camera_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>